<resources>
    <string name="app_name">Indoor Navigation</string>
    <string name="title_activity_main">Indoor Navigation</string>
    <string name="title_activity_map">Indoor Navigation</string>
    <string name="title_activity_wifi">Wifi-Scanner</string>
    <string name="title_activity_drone">Drohnensteuerung</string>
    <string name="title_activity_data">RSSI Distanz</string>
    <string name="title_fragment_radiomap">Radiomap</string>
    <string name="edit_route">Route bearbeiten</string>

    <string name="fragment_rssi_distance_input">Distanz</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Einstellungen</string>

    <string name="drone_scanning">Scanning for devices</string>

    <string name="rollright">rollRight</string>
    <string name="roll_left">roll left</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="yaw_right">Yaw Right</string>
    <string name="emergency">Emergency land</string>
    <string name="take_off_land">Take off / Land</string>
    <string name="picture">Picture</string>
    <string name="current_position">Current Position</string>
    <string name="yaw_left">Yaw Left</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="moveBy">move by</string>
    <string name="dauer_der_datenerfassung">Dauer der Datenerfassung</string>

    <string name="dialog_radiomap_measuring_points">Aktuellen Messpunkt auswählen</string>
    <string name="dialog_radiomap_ap">Basisstationen auswählen</string>
    <string name="dialog_radiomap_length">Dauer der Messung (in Sekunden)</string>
    <string name="dialog_radiomap_bearing">Aktuelle Ausrichtung der Drohne</string>

    <string name="basisstation_ausw_hlen">Basisstation auswählen</string>
    <string name="ausgew_hlte_basisstation">Bitte Basisstation auswählen</string>
    <string name="abstand_1m">Abstand: 1m</string>
    <string name="starte_messung">Starte Messung</string>

    <string-array name="spinnerRadiomap">
        <item>Basisstation hinzufügen</item>
        <item>Messpunkt hinzufügen</item>
    </string-array>
    <string name="title_activity_settings">Einstellungen</string>

    <!-- Strings related to Settings -->
    <string name="pref_database">Datenbank</string>

    <string name="pref_export_db">Datenbank exportieren</string>
    <string name="pref_description_export">Datenbank wird in den Download-Ordner exportiert</string>

    <string name="pref_import_db">Datenbank importieren</string>
    <string name="pref_description_import">Datenbank wird aus dem Download-Ordner importiert</string>

    <string name="pref_localization">Lokalisierung</string>

    <string name="pref_localization_list">Art der Lokalisierung</string>

    <string-array name="pref_loc_entries">
        <item>Lateration</item>
        <item>Fingerprinting</item>
    </string-array>

    <string-array name="pref_loc_entries_values">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="settings">Einstellungen</string>
    <string name="rssi_distance_est">Abstand zum Sender</string>
    <string name="rssi_write_to_db">Durchschn. RSS in Db schreiben</string>
</resources>
